# influxdb-c

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  bootstrap  configure.ac
src/: Makefile.am  client.c  client.h  cluster_admin.c  cluster_admin.h  database.c  database.h  database_user.c  database_user.h  influxdb.h  query.c  query.h  series.c  series.h  server.c  server.h  shard.c  shard.h  utils.c  utils.h
tests/: Makefile.am  cluster_admin.c  database.c  database_user.c  server.c  tests.c  tests.h
